# dirwalk

./: About.txt  CMakeLists.txt  README.md
include/: dirwalk.h
src/: add_dirwalk_alias.sh  add_dirwalk_alias.zsh  dirwalk.h  main.c  process_entry.c  walk_directory.c
